--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,9 @@
     "dev": "npx next dev",
     "build": "npx next build",
     "start": "npx next start",
-    "lint": "npx eslint ."
+    "lint": "npx eslint .",
+
+    "publish": "npm run build && git add ../data/encontros.json ../data/grupos.json styles/globals.css && git commit -m \"content: update grupos e eventos\" && git push"
   },
   "dependencies": {
     "html-to-image": "^1.11.13",
