--- a/web/package.json
+++ b/web/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "dev": "npx next dev",
     "build": "npx next build",
-    "start": "npx next start",
-    "lint": "npx eslint .",
 
-    "publish": "npm run build && git add ../data/encontros.json ../data/grupos.json styles/globals.css && git commit -m \"content: update grupos e eventos\" && git push"
+    "publish:content": "npm run build && git add ../data/encontros.json ../data/grupos.json styles/globals.css && git commit -m \"content: update grupos e eventos\" && git push",
+
+    "publish:code": "npm run build && git add . && git commit -m \"feat: update codigo\" && git push"
   },
   "dependencies": {
     "html-to-image": "^1.11.13",
