--- a/web/package.json
+++ b/web/package.json
@@ -7,15 +7,12 @@
     "build": "npx next build",
     "start": "next start",
     "lint": "next lint",
-
     "publish:content": "npm run build && git add ../data/encontros.json ../data/grupos.json styles/globals.css && git commit -m \"content: update grupos e eventos\" && git push",
-
     "publish:code": "npm run build && git add . && git commit -m \"feat: update codigo\" && git push",
-
     "publish": "npm run build && node scripts/publish.js"
-
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.95.3",
     "html-to-image": "^1.11.13",
     "next": "15.5.10",
     "puppeteer": "^24.36.1",
@@ -31,6 +28,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.10",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
