--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,8 @@
     "publish": "npm run build && node scripts/publish.js"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@supabase/supabase-js": "^2.95.3",
     "html-to-image": "^1.11.13",
     "next": "15.5.10",
